<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:navigationIcon="@drawable/logout"
                app:title="">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/settingsBtn"
                    style="?attr/materialIconButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@android:color/transparent"
                    app:icon="@drawable/setting"
                    app:iconTint="@color/body_text" />

            </com.google.android.material.appbar.MaterialToolbar>

        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        style="@style/Widget.TabBar"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/recommendations_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/rec_tab"
            android:tag="REC"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/meditations_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meditation_tab"
            android:tag="MED"
            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tests_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tests_tab"
            android:tag="TESTS"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dairy_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dairy_tab"
            android:tag="DAIRY"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/progress_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/progress_tab"
            android:tag="PROGRESS"/>


        <com.google.android.material.tabs.TabItem
            android:id="@+id/addons_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/addons_tab"
            android:tag="ADDONS"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:name="com.pracktic.yogaspirit.fragments.RecFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>